@@ -1,3 +1,4 @@
+Build a Fraction: Shapes: Fixed: When a new container comes out (after completing a target), it does not go to the same "centered" place as the original one
 # 1.00.33 (66874) Aug 12, 2012
 Build a Fraction: Numbers: Center the initial fraction skeleton and floating panel under the "Level #" heading
 Build a Fraction: Shapes: Center the initial container and floating panel under the "Level #" heading
